--- a/src/card.css
+++ b/src/card.css
@@ -3,10 +3,14 @@
     height: 100px;
     width: 75px;
     border-style: solid;
+    border-color: blueviolet;
     border-width: 2px;
     border-radius: 5px;
     padding: 10px;
     justify-content: center;
     align-items: center;
     margin: 10px;
+    background-color: grey;
+    font-size: 40px;
+    color: white;
 }
