--- a/src/board.css
+++ b/src/board.css
@@ -1,6 +1,13 @@
 .board-container {
 	display: flex;
-	flex: 1;
+	flex: 4;
+}
+
+.row {
+	flex-direction: row;
+}
+
+.column {
 	flex-direction: column;
 }
 
@@ -8,5 +15,5 @@
 	display: flex;
 	flex: 1;
 	justify-content: center;
-	flex-direction: row;
+	align-items: center;
 }
